cpwarfile/builds/20/log
Started by user [8mha:AAAAlh+LCAAAAAAAAP9b85aBtbiIQTGjNKU4P08vOT+vOD8nVc83PyU1x6OyILUoJzMv2y+/JJUBAhiZGBgqihhk0NSjKDWzXb3RdlLBUSYGJk8GtpzUvPSSDB8G5tKinBIGIZ+sxLJE/ZzEvHT94JKizLx0a6BxUmjGOUNodHsLgAzOEgYu/dLi1CL9vNKcHACFIKlWvwAAAA==[0manonymous
Building remotely on [8mha:AAAAnR+LCAAAAAAAAP9b85aBtbiIQTGjNKU4P08vOT+vOD8nVc83PyU1x6OyILUoJzMv2y+/JJUBAhiZGBgqihhk0NSjKDWzXb3RdlLBUSYGJk8GtpzUvPSSDB8G5tKinBIGIZ+sxLJE/ZzEvHT94JKizLx0a6BxUmjGOUNodHsLgAwOoBn6yfm5BaUlqUX6SaWZOSnFRWUAbGUHVscAAAA=[0mbuildsrv in workspace /home/meirz/jenkins/workspace/cpwarfile
[cpwarfile] $ python /tmp/hudson7181857310109618566.py
  File "/tmp/hudson7181857310109618566.py", line 15
    main()  
       ^
IndentationError: expected an indented block
Build step 'Execute Python script' marked build as failure
Finished: FAILURE
